finally got counter to work, conditionals not working

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
             </p>
         </div>
         <h2> Diamonds to collect: <span id="random-number"></span></h2>
-        <div id="total"></div>
-        <div id="wins"></div>
-        <div id="losses"></div>
+        <div id="total-diamonds">Total Diamonds:<span id="total"></span></div>
+        <div id="win-score">Wins:<span id="wins"></span></div>
+        <div id="loss-score">Losses:<span id="losses"></span></div>
         <div id="alldiamonds"></div>
 
     </div>
