--- a/index.html
+++ b/index.html
@@ -5,32 +5,36 @@
     <meta charset="utf-8" />
     <title>diamonds.math(random)</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+        crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
+    <link href="https://fonts.googleapis.com/css?family=Cardo|Petit+Formal+Script" rel="stylesheet">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 </head>
 
 <body>
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+            <h1 class="display-4">Diamond Dilemma</h1>
+            <div class="container2">
+                <p class="right">Using the four diamonds below, collect enough to match the computer's generated diamonds.
+                    Each diamond has a mystery different value, which is revealed on each click. If you go over the computer's
+                    total diamonds, you lose, but if you match them, you win! When the game restarts, your diamond values
+                    will change as well as the computer's diamonds.</p>
+            </div>
+        </div>
+    </div>
 
-    <div class="container">
-        <div id="row">
-            <h2> diamond dash</h2>
-        </div>
-        <div id="row">
-            <p>you will be given a random number at the beginning of the game. <br> there are four diamonds to choose from.
-                by clicking on a diamond, you will add a specific amount of points to your total. <br> you win the game by
-                matching your points to the random number. you lose the game if your total number goes over the random number
-                <br> the value of each diamond is hidden from you until you click on it. <br> each time the game starts,
-                the random number and diamond values will change.
-            </p>
-        </div>
-        <h2> Diamonds to collect: <span id="random-number"></span></h2>
-        <div id="total-diamonds">Total Diamonds:<span id="total"></span></div>
-        <div id="win-score">Wins:<span id="wins"></span></div>
-        <div id="loss-score">Losses:<span id="losses"></span></div>
+    <div id="container">
+        <h5> Diamonds to collect: <span id="random-number"></span></h5>
+        <h5 id="total-diamonds">Total Diamonds:<span id="total"></span></h5>
+        <h6 id="win-score">Wins:<span id="wins"></span></h6>
+        <h6 id="loss-score">Losses:<span id="losses"></span></h6>
+    </div>
+
         <div id="alldiamonds"></div>
 
-    </div>
     <script src="game.js"></script>
 </body>
 
