--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
     </div>
 
     <div id="container">
-        <h5> Diamonds to collect: <span id="random-number"></span></h5>
+        <h5> Diamonds to Collect: <span id="random-number"></span></h5>
         <h5 id="total-diamonds">Total Diamonds:<span id="total"></span></h5>
+        <hr>
         <h6 id="win-score">Wins:<span id="wins"></span></h6>
         <h6 id="loss-score">Losses:<span id="losses"></span></h6>
     </div>
