finished css, readme, alerts

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>diamonds.math(random)</title>
+    <title>diamond digits</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
@@ -16,7 +16,7 @@
 <body>
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
-            <h1 class="display-4">Diamond Dilemma</h1>
+            <h1 class="display-4">Diamond Digits</h1>
             <div class="container2">
                 <p class="right">Using the four diamonds below, collect enough to match the computer's generated diamonds.
                     Each diamond has a mystery different value, which is revealed on each click. If you go over the computer's
